[package]
name = "tweetust"
version = "0.4.1"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "The Twitter API wrapper"
documentation = "https://docs.rs/tweetust/0.4.1/tweetust/"
repository = "https://github.com/azyobuzin/tweetust"
readme = "README.md"
keywords = ["twitter", "tweet"]
license = "MIT"
include = ["**/*.rs", "Cargo.toml", "LICENSE.txt", "README.md", "CoreTweet/ApiTemplates/*.api", "api_templates_override/*.api"]
build = "build.rs"

[dependencies]
chrono = { version = "0.2", features = ["serde"] }
hyper = "0.9.12"
oauthcli = { version = "1.0.2", features = ["hyper"] }
serde = "0.8"
serde_json = "0.8"
url = "1.2"

[dependencies.multipart]
version = "0.8.1"
default-features = false
features = ["hyper", "client"]

[build-dependencies]
Inflector = "0.6"
log = "0.3"
matches = "0.1"
nom = "1.2"
serde_codegen = "0.8"
