[package]
name = "tweetust"
version = "0.6.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "The Twitter API wrapper"
documentation = "https://docs.rs/tweetust/0.6.0/tweetust/"
repository = "https://github.com/azyobuzin/tweetust"
readme = "README.md"
keywords = ["twitter", "tweet"]
license = "MIT"
include = ["**/*.rs", "**/Cargo.toml", "LICENSE.txt", "README.md", "CoreTweet/ApiTemplates/*.api", "api_templates_override/*.api"]
build = "build.rs"

[dependencies]
chrono = { version = "0.2", features = ["serde"] }
hyper = "0.10"
hyper-native-tls = { version = "0.2", optional = true }
oauthcli = "1"
serde = "0.8"
serde_json = "0.8"
url = "1"

[dependencies.multipart]
version = "0.11"
default-features = false
features = ["client"]

[build-dependencies]
Inflector = { version = "0.10", default-features = false }
log = "0.3"
matches = "0.1"
nom = "1.2"
serde_codegen = "0.8"

[features]
default = ["hyper-native-tls"]

[workspace]
members = ["clientgen_test"]
