[package]
name = "tweetust"
version = "0.10.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "The Twitter API wrapper"
documentation = "https://docs.rs/tweetust/0.10.0/tweetust/"
repository = "https://github.com/azyobuzin/tweetust"
readme = "README.md"
keywords = ["twitter", "tweet"]
license = "MIT"
include = ["**/*.rs", "**/Cargo.toml", "/LICENSE.txt", "/README.md", "CoreTweet/ApiTemplates/*.api", "api_templates_override/*.api"]
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.10"
hyper-native-tls = { version = "0.2", optional = true }
oauthcli = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"

[dependencies.multipart]
version = "0.12" # 0.13.0 can't be compiled without `server` feature
default-features = false
features = ["client", "hyper"]

[build-dependencies]
Inflector = { version = "0.11", default-features = false }
log = "0.3"
matches = "0.1"
nom = "1.2"

[features]
default = ["hyper-native-tls"]

[workspace]
members = ["clientgen_test"]
