[package]
name = "tweetust_macros"
version = "0.0.2"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "Macros used in tweetust"
documentation = "http://www.rust-ci.org/azyobuzin/tweetust/doc/tweetust_macros/"
repository = "https://github.com/azyobuzin/tweetust"
license = "MIT"

[lib]
name = "tweetust_macros"
crate-type = ["dylib"]
plugin = true
