[package]
name = "tweetust_macros"
version = "0.0.3"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "Macros used in tweetust"
documentation = "http://azyobuzin.github.io/tweetust/tweetust_macros/"
repository = "https://github.com/azyobuzin/tweetust"
license = "MIT"

[lib]
name = "tweetust_macros"
crate-type = ["dylib"]
plugin = true
